# samd21-playground

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  board.h  main.cpp  openocd.cfg  toolchain-arm-none-eabi-samd21.cmake
samd21driver/: CMakeLists.txt  Pin.h  Serial.cpp  Serial.h  delay.cpp  delay.h
